--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "vue3-img-input",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "author": {
     "name": "Vladislav Semenov",
     "url": "https://github.com/HeAmongUs"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HeAmongUs/vue3-img-input"
+  },
   "keywords": [
     "vue",
     "vue3",
